Athena_Widget/include/Xm/in_Arbeit/Xm.pp


procedure XmStringDrawUnderline(d:PDisplay; w:TWindow; fntlst:TXmFontList; str:TXmString; gc:TGC; 
                x:longint; y:longint; width:longint; align:dword; lay_dir:dword; 
                x:TPosition; y:TPosition; width:TDimension; align:byte; lay_dir:byte; 
                clip:PXRectangle; under:TXmString);cdecl;external;
function XmCvtXmStringToByteStream(_string:TXmString; prop_return:PPbyte):dword;cdecl;external;
function XmCvtByteStreamToXmString(_property:Pbyte):TXmString;cdecl;external;
function XmStringByteStreamLength(_string:Pbyte):dword;cdecl;external;
function XmStringPeekNextTriple(context:TXmStringContext):TXmStringComponentType;cdecl;external;
function XmStringGetNextTriple(context:TXmStringContext; length:Pdword; value:PXtPointer):TXmStringComponentType;cdecl;external;
function XmStringComponentCreate(tag:TXmStringComponentType; length:dword; value:TXtPointer):TXmString;cdecl;external;
function XmStringUnparse(_string:TXmString; tag:TXmStringTag; tag_type:TXmTextType; output_type:TXmTextType; parse_table:TXmParseTable; 
               parse_count:TCardinal; parse_model:TXmParseModel):TXtPointer;cdecl;external;
function XmStringParseText(text:TXtPointer; text_end:PXtPointer; tag:TXmStringTag; _type:TXmTextType; parse_table:TXmParseTable; 
               parse_count:TCardinal; call_data:TXtPointer):TXmString;cdecl;external;
function XmStringToXmStringTable(_string:TXmString; break_comp:TXmString; table:PXmStringTable):TCardinal;cdecl;external;
function XmStringTableToXmString(table:TXmStringTable; count:TCardinal; break_component:TXmString):TXmString;cdecl;external;
function XmStringTableUnparse(table:TXmStringTable; count:TCardinal; tag:TXmStringTag; tag_type:TXmTextType; output_type:TXmTextType; 
               parse:TXmParseTable; parse_count:TCardinal; parse_model:TXmParseModel):PXtPointer;cdecl;external;
function XmStringTableParseStringArray(strings:PXtPointer; count:TCardinal; tag:TXmStringTag; _type:TXmTextType; parse:TXmParseTable; 
               parse_count:TCardinal; call_data:TXtPointer):TXmStringTable;cdecl;external;
function XmDirectionToStringDirection(dir:TXmDirection):TXmStringDirection;cdecl;external;
function XmStringDirectionToDirection(dir:TXmStringDirection):TXmDirection;cdecl;external;
function XmStringGenerate(text:TXtPointer; tag:TXmStringTag; _type:TXmTextType; rendition:TXmStringTag):TXmString;cdecl;external;
function XmStringPutRendition(_string:TXmString; rendition:TXmStringTag):TXmString;cdecl;external;
function XmParseMappingCreate(arg_list:TArgList; arg_count:TCardinal):TXmParseMapping;cdecl;external;
procedure XmParseMappingSetValues(parse_mapping:TXmParseMapping; arg_list:TArgList; arg_count:TCardinal);cdecl;external;
procedure XmParseMappingGetValues(parse_mapping:TXmParseMapping; arg_list:TArgList; arg_count:TCardinal);cdecl;external;
procedure XmParseMappingFree(parse_mapping:TXmParseMapping);cdecl;external;
procedure XmParseTableFree(parse_table:TXmParseTable; parse_count:TCardinal);cdecl;external;
    {*******    End Public Function Declarations    ******* }
    {*******    Public Function Declarations for XmTabList.c    ******* }
function XmStringTableProposeTablist(strings:TXmStringTable; num_strings:TCardinal; widget:TWidget; pad_value:single; offset_model:TXmOffsetModel):TXmTabList;cdecl;external;
procedure XmTabSetValue(xmtab:TXmTab; value:single);cdecl;external;
function XmTabGetValues(xmtab:TXmTab; units:Pbyte; offset:PXmOffsetModel; alignment:Pbyte; decimal:PPchar):single;cdecl;external;
procedure XmTabFree(xmtab:TXmTab);cdecl;external;
function XmTabCreate(value:single; units:byte; offset_model:TXmOffsetModel; alignment:byte; decimal:Pchar):TXmTab;cdecl;external;
function XmTabListRemoveTabs(oldlist:TXmTabList; position_list:PCardinal; position_count:TCardinal):TXmTabList;cdecl;external;
function XmTabListReplacePositions(oldlist:TXmTabList; position_list:PCardinal; tabs:PXmTab; tab_count:TCardinal):TXmTabList;cdecl;external;
function XmTabListGetTab(tablist:TXmTabList; position:TCardinal):TXmTab;cdecl;external;
function XmTabListTabCount(tablist:TXmTabList):TCardinal;cdecl;external;
function XmTabListCopy(tablist:TXmTabList; offset:longint; count:TCardinal):TXmTabList;cdecl;external;
procedure XmTabListFree(tablist:TXmTabList);cdecl;external;
function XmTabListInsertTabs(oldlist:TXmTabList; tabs:PXmTab; tab_count:TCardinal; position:longint):TXmTabList;cdecl;external;
    {*******    End Public Function Declarations    ******* }
    {*******    Public Function Declarations for XmRenderTable.c    ******* }
function XmRenderTableCvtFromProp(para1:TWidget; prop:Pchar; len:dword):TXmRenderTable;cdecl;external;
function XmRenderTableCvtToProp(para1:TWidget; table:TXmRenderTable; prop_return:PPchar):dword;cdecl;external;
procedure XmRenditionUpdate(rendition:TXmRendition; arglist:TArgList; argcount:TCardinal);cdecl;external;
procedure XmRenditionRetrieve(rendition:TXmRendition; arglist:TArgList; argcount:TCardinal);cdecl;external;
procedure XmRenditionFree(rendition:TXmRendition);cdecl;external;
function XmRenditionCreate(widget:TWidget; tag:TXmStringTag; arglist:TArgList; argcount:TCardinal):TXmRendition;cdecl;external;
function XmRenderTableGetRenditions(table:TXmRenderTable; tags:PXmStringTag; tag_count:TCardinal):PXmRendition;cdecl;external;
function XmRenderTableGetRendition(table:TXmRenderTable; tag:TXmStringTag):TXmRendition;cdecl;external;
function XmRenderTableGetTags(table:TXmRenderTable; tag_list:PPXmStringTag):longint;cdecl;external;
procedure XmRenderTableFree(table:TXmRenderTable);cdecl;external;
function XmRenderTableCopy(table:TXmRenderTable; tags:PXmStringTag; tag_count:longint):TXmRenderTable;cdecl;external;
function XmRenderTableRemoveRenditions(oldtable:TXmRenderTable; tags:PXmStringTag; tag_count:longint):TXmRenderTable;cdecl;external;
function XmRenderTableAddRenditions(oldtable:TXmRenderTable; renditions:PXmRendition; rendition_count:TCardinal; merge_mode:TXmMergeMode):TXmRenderTable;cdecl;external;
    {*******    End Public Function Declarations    ******* }
    {*******    Public Function Declarations for Dest.c    ******* }
function XmGetDestination(display:PDisplay):TWidget;cdecl;external;
    {*******    End Public Function Declarations    ******* }
    {*******    Public Function Declarations for Traversal.c    ******* }
function XmIsTraversable(wid:TWidget):TBoolean;cdecl;external;
function XmGetVisibility(wid:TWidget):TXmVisibility;cdecl;external;
function XmGetTabGroup(wid:TWidget):TWidget;cdecl;external;
function XmGetFocusWidget(wid:TWidget):TWidget;cdecl;external;
function XmProcessTraversal(w:TWidget; dir:TXmTraversalDirection):TBoolean;cdecl;external;
procedure XmAddTabGroup(tabGroup:TWidget);cdecl;external;
procedure XmRemoveTabGroup(w:TWidget);cdecl;external;
    {*******    End Public Function Declarations    ******* }
    {*******        ******* }
    {
     * The following includes are for source compatibility.  They might be
     *    removed at some future time.
      }
{$include <Xm/VendorS.h>}
{$include <Xm/XmIm.h>}
(* error 
#define XmINDICATOR_3D_BOX		0x01
in define line 2086 *)

    const
      XmINDICATOR_FLAT_BOX = $02;      
      XmINDICATOR_CHECK_GLYPH = $10;      
      XmINDICATOR_CROSS_GLYPH = $20;      
(* error 
enum {
    { Treated as _BOX or _CHECK_BOX  }
    { Treated as XmINDICATOR_3D_BOX  }
in declaration at line 2099 *)
(* error 
enum { XmUNSET, XmSET, XmINDETERMINATE };
in declaration at line 2101 *)
(* error 
enum { XmTOGGLE_BOOLEAN, XmTOGGLE_INDETERMINATE };
in declaration at line 2102 *)
    type
      PXmToggleButtonState = ^TXmToggleButtonState;
      TXmToggleButtonState = byte;
    { Shared text enum.  }

      PXmTextStatus = ^TXmTextStatus;
      TXmTextStatus =  Longint;
      Const
        EditDone = 0;
        EditError = 1;
        EditReject = 2;
;
    { XmDisplay.XmNdefaultButtonEmphasis enum  }
(* error 
enum { XmEXTERNAL_HIGHLIGHT, XmINTERNAL_HIGHLIGHT };
in declaration at line 2109 *)
    { new for XmString  }
      _MOTIF_DEFAULT_LOCALE = '_MOTIF_DEFAULT_LOCALE';      
(* error 
enum { XmPATH_MODE_FULL, XmPATH_MODE_RELATIVE };
in declaration at line 2114 *)
(* error 
enum { XmFILTER_NONE, XmFILTER_HIDDEN_FILES} ;
in declaration at line 2115 *)
{$endif}
    { _Xm_h  }
    { DON'T ADD STUFF AFTER THIS #endif  }

implementation

    { was #define dname def_expr }
    function XmSTRING_COMPONENT_END : TXmStringComponentType;
      begin
        XmSTRING_COMPONENT_END:=TXmStringComponentType(126);
      end;

    { was #define dname def_expr }
    function XmSTRING_COMPONENT_USER_BEGIN : TXmStringComponentType;
      begin
        XmSTRING_COMPONENT_USER_BEGIN:=TXmStringComponentType(128);
      end;

    { was #define dname def_expr }
    function XmSTRING_COMPONENT_USER_END : TXmStringComponentType;
      begin
        XmSTRING_COMPONENT_USER_END:=TXmStringComponentType(255);
      end;

    { was #define dname def_expr }
    function XmUNSPECIFIED_PIXEL : TPixel;
      begin
        XmUNSPECIFIED_PIXEL:=TPixel( not (0));
      end;

    { was #define dname def_expr }
    function XmFMT_8_BIT : TXmTextFormat;
      begin
        XmFMT_8_BIT:=TXmTextFormat(XA_STRING);
      end;

    { was #define dname def_expr }
    function XmFMT_16_BIT : TXmTextFormat;
      begin
        XmFMT_16_BIT:=TXmTextFormat(2);
      end;


end.
